fixed #275 quick fix for NoseRub filter not showing

--- a/branches/development/app/webroot/css/typo.css
+++ b/branches/development/app/webroot/css/typo.css
@@ -124,7 +124,7 @@ body {
 
 .subnav li {
 	display: inline;
-	padding-right: 10px;
+	padding-right: 6px;
 }
 
 dd {
